[package]
authors = ["David Peter <mail@david-peter.de>"]
categories = ["command-line-utilities"]
description = "A command-line hex viewer"
homepage = "https://github.com/sharkdp/hexyl"
license = "MIT/Apache-2.0"
name = "hexyl"
readme = "README.md"
repository = "https://github.com/sharkdp/hexyl"
version = "0.10.0"
edition = "2021"

[dependencies]
ansi_term = "0.12"
anyhow = { version = "1.0", optional = true }
atty = { version = "0.2", optional = true }
const_format = { version = "0.2", optional = true }
libc = "0.2"
thiserror = { version = "1.0", optional = true }

[dependencies.clap]
version = "3"
default-features = false
features = ["std", "suggestions", "color", "wrap_help", "cargo"]
optional = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = { version = "2.0", default-features = false }

[features]
default = ["cli"]
cli = ["anyhow", "atty", "clap", "const_format", "thiserror"]

[profile.release]
lto = true
codegen-units = 1
