[package]
authors = ["David Peter <mail@david-peter.de>"]
categories = ["command-line-utilities"]
description = "A command-line hex viewer"
homepage = "https://github.com/sharkdp/hexyl"
license = "MIT/Apache-2.0"
name = "hexyl"
readme = "README.md"
repository = "https://github.com/sharkdp/hexyl"
version = "0.15.0"
edition = "2021"
rust-version = "1.74"

[[bin]]
name = "hexyl"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
anyhow = { version = "1.0", optional = true }
const_format = { version = "0.2", optional = true }
libc = "0.2"
owo-colors = "4"
supports-color = { version = "3", optional = true }
thiserror = { version = "1.0", optional = true }
terminal_size = { version = "0.4", optional = true }

[dependencies.clap]
version = "4"
features = ["cargo", "derive", "wrap_help"]
optional = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
pretty_assertions = "1.4.0"

[features]
default = ["cli"]
cli = ["anyhow", "clap", "const_format", "supports-color", "terminal_size", "thiserror"]

[profile.release]
lto = true
codegen-units = 1
